--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 markdown: kramdown
 title: Destroying Computer
 description: Why are you here?
-remote-theme: akiritsu/pRoJEct-NeGYa
+remote-theme: 7te/pRoJEct-NeGYa
