Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ markdown: kramdown
 title: Destroying Computer
 description: Why are you here?
 remote-theme: 7te/pRoJEct-NeGYa
+theme: jekyll-theme-minimal
