--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 markdown: kramdown
 title: Destroying Computer
 description: Why are you here?
-remote-theme: 7te/pRoJEct-NeGYa
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
