--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: kramdown
 title: Destroying Computer
-description: swag surfin 2 insterstellar planet
+description: The only sure thing about luck is that it will change.
 logo: /assets/img/cheabs2.jpg
 theme: jekyll-theme-minimal
 plugins: 
